deleting xmp + adding questrial animatie toevoegen

--- a/css/light-version/style.css
+++ b/css/light-version/style.css
@@ -1885,3 +1885,8 @@ body.modal-open {
     padding-right: 0 !important;
     margin-right: 0 !important; 
   }
+
+  .icons {
+      width: 64px;
+      image-rendering: smooth;
+  }
